@@ -1,6 +1,7 @@
 Version 5.5.0 (TBD)
     Added `hasPlugin` function to the editor API to determine if a plugin exists or not #TINY-766
     Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
+    Fixed an issue where media elements couldn't be navigated or deleted without the `media` plugin enabled #TINY-4211
     Fixed an issue where dragging and dropping within a table would select table cells #TINY-5950
 Version 5.4.1 (2020-07-08)
     Fixed the Search and Replace plugin incorrectly including zero-width caret characters in search results #TINY-4599
